--- a/demo/hub.html
+++ b/demo/hub.html
@@ -10,9 +10,9 @@
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
 
-   <title>About</title>
+   <title>Hub</title>
 
-   <meta name="robots" content="index, nofollow">
+   <meta name="robots" content="noindex, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
    <meta name="keywords" content="bootmetro, modern ui, modern-ui, metro, metroui, metro-ui, metro ui, windows 8, metro style, bootstrap, framework, web framework, css, html" />
    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
@@ -27,7 +27,7 @@
    <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="content/css/site.css">
+   <link rel="stylesheet" type="text/css" href="content/css/demo.css">
 
    <!-- Le fav and touch icons -->
    <link rel="shortcut icon" href="content/ico/favicon.ico">
@@ -40,17 +40,6 @@
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
    <script src="scripts/modernizr-2.6.2.min.js"></script>
-
-   <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-3182578-6']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-   </script>
 </head>
 
 <body>
@@ -64,11 +53,11 @@
       <div class="row">
          <div class="span12">
             <div id="header-container">
-               <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
+               <a id="backbutton" class="win-backbutton" href="./index.html"></a>
                <h5>BootMetro</h5>
                <div class="dropdown">
-                  <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                     About &amp; Credits
+                  <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#">
+                     Start
                      <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu">
@@ -93,39 +82,150 @@
                </ul>
             </div>
             </div>
+            <div id="top-info" class="pull-right">
+            <a id="settings" href="#" class="win-command pull-right">
+               <span class="win-commandicon win-commandring icon-cog-3"></span>
+            </a>
+            <a id="logged-user" href="#" class="win-command pull-right">
+               <span class="win-commandicon win-commandring icon-user"></span>
+            </a>
+            <div class="pull-left">
+               <h3>FirstName</h3>
+               <h4>LastName</h4>
+            </div>
          </div>
+      </div>
       </div>
    </header>
    
    <div class="container">
       <div class="row">
-         <div class="span12">
+         <div id="hub" class="metro span12">
+            <div class="panorama">
+               <div class="panorama-sections">
    
-            <h1>About <small></small></h1>
-            <p>
-               Early in 2012, when Microsoft released the first beta of Windows 8 I finally had the opportunity to try the "Metro UI" (now renamed to... Windows 8 App Store style).
-               At that time the UI guidelines was almost done, and also the "direction" set by microsoft was clear. I looked for other references of Metro style around the web, and there was nothing or little info apart the official one.
-               <br/>
-               So I had the idea "why not recreate in pure HTML5/CSS3 the win 8 style ?". I was already working with the beautiful Twitter Bootstrap framework and I thought that it was relatively simple to customize it to recreate a metro style.
-               So... I started it.
-               <br/>
-               At the same time I found the project MetroUI-CSS, by Sergey Pimenov, that evidently have had the same idea, but with some missing things from the original Metro guidelines, but his development was already ahead of mine.
-               So, that's the story that started all about BootMetro!
-            </p>
+               <div id="section1" class="panorama-section tile-span-4">
    
-            <h2>Author</h2>
-            <p>
-               I'm <a href="http://www.marcellop.com/">Marcello Palmitessa</a>, an italian developer, curious designer, and tech geek.
-            </p>
+                  <h2>BootMetro Demos</h2>
    
-            <h2>Contributors <small></small></h2>
-            <p>
-               I wish to thank Alexander Finger &amp; David Smith for their support and all the githubbers who keep me on the road to improve the project.
-            </p>
+                  <a class="tile wide imagetext bg-color-orange" href="./metro-layouts.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/metro-tiles.jpg" />
+                     </div>
+                     <div class="column-text">
+                        <div class="text4">Demos of various Metro style layouts.</div>
+                     </div>
+                     <div class="app-label">Layouts</div>
+                  </a>
    
+                  <a class="tile wide imagetext bg-color-blueDark" href="./tiles-templates.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/metro-tiles.jpg" />
+                     </div>
+                     <div class="column-text">
+                        <div class="text4">List of all tile templates: square, wide, widepeek, with images or text only.</div>
+                     </div>
+                     <div class="app-label">Tiles Templates</div>
+                  </a>
+   
+                  <a class="tile wide imagetext wideimage bg-color-orange" href="./appbar-demo.html">
+                     <img src="content/img/appbar.png" alt=""/>
+                     <div class="textover-wrapper bg-color-blue">
+                        <div class="text2">Application Bar</div>
+                     </div>
+                  </a>
+   
+                  <a class="tile app square bg-color-greenDark" href="./table.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/My Apps.png" alt=""/>
+                     </div>
+                     <div class="app-label">Styled Table</div>
+                  </a>
+   
+                  <a class="tile app bg-color-purple" href="./listviews.html">
+                     <div class="image-wrapper">
+                        <span class="icon icon-list-2"></span>
+                     </div>
+                     <span class="app-label">ListView</span>
+                  </a>
+   
+                  <a class="tile app bg-color-red" href="#">
+                     <div class="image-wrapper">
+                        <span class="icon icon-publish"></span>
+                     </div>
+                     <span class="app-label">[TODO] Charms</span>
+                  </a>
+   
+                  <a class="tile app bg-color-blueDark" href="./icons.html">
+                     <div class="image-wrapper">
+                        <span class="icon icon-IcoMoon" ></span>
+                     </div>
+                     <span class="app-label">Icons</span>
+                  </a>
+   
+                  <a class="tile app bg-color-purple" href="./metro-components.html">
+                     <div class="image-wrapper">
+                        <span class="icon icon-list-2"></span>
+                     </div>
+                     <span class="app-label">Metro Components</span>
+                  </a>
+   
+               </div>
+   
+               <div id="section2" class="panorama-section tile-span-4">
+   
+                  <h2>Bootstrap Metro</h2>
+   
+                  <a class="tile wide imagetext bg-color-blue" href="./scaffolding.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/My Apps.png" />
+                     </div>
+                     <div class="column-text">
+                        <div class="text">Grid system</div>
+                        <div class="text">Layouts</div>
+                        <div class="text">Responsive design</div>
+                     </div>
+                     <span class="app-label">SCAFFOLDING</span>
+                  </a>
+   
+                  <a class="tile wide imagetext bg-color-blueDark" href="./base-css.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/Coding app.png" />
+                     </div>
+                     <div class="column-text">
+                        <div class="text">Typography</div>
+                        <div class="text">Tables</div>
+                        <div class="text">Forms</div>
+                        <div class="text">Buttons</div>
+                     </div>
+                     <span class="app-label">BASE CSS</span>
+                  </a>
+   
+                  <a class="tile app bg-color-orange" href="./components.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/RegEdit.png" alt="" />
+                     </div>
+                     <span class="app-label">COMPONENTS</span>
+                  </a>
+   
+                  <a class="tile app bg-color-red" href="./javascript.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/Devices.png" alt="" />
+                     </div>
+                     <span class="app-label">JAVASCRIPT</span>
+                  </a>
+   
+               </div>
+   
+            </div>
+            </div>
+            <a id="panorama-scroll-prev" href="#">&#xe12e;</a>
+            <a id="panorama-scroll-next" href="#">&#xe12a;</a>
          </div>
       </div>
    </div>
+   
+   
    <div id="charms" class="win-ui-dark slide">
    
       <div id="theme-charms-section" class="charms-section">
@@ -159,12 +259,13 @@
    <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
    <![endif]-->
 
-   <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
+   <!--<script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>-->
+   <!--<script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>-->
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
    <script type="text/javascript">
