--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,9 @@
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
 
-   <title>Index2 · BootMetro</title>
+   <title>Index2</title>
 
-   <meta name="robots" content="noindex, nofollow">
+   <meta name="robots" content="index, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
    <meta name="keywords" content="bootmetro, modern ui, modern-ui, metro, metroui, metro-ui, metro ui, windows 8, metro style, bootstrap, framework, web framework, css, html" />
    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
@@ -25,13 +25,9 @@
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
-   <!--[if IE 7]>
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons-ie7.css">
-   <![endif]-->
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="content/css/demo.css">
-   <link rel="stylesheet" type="text/css" href="scripts/google-code-prettify/prettify.css" >
+   <link rel="stylesheet" type="text/css" href="content/css/site.css">
 
    <!-- Le fav and touch icons -->
    <link rel="shortcut icon" href="content/ico/favicon.ico">
@@ -219,14 +215,16 @@
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
    <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
+   <!--[if IE 7]>
+   <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
+   <![endif]-->
+
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
    <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
-   <script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>
-   <!--<script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>-->
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
    <script type="text/javascript">
