--- a/demo/table.html
+++ b/demo/table.html
@@ -10,7 +10,7 @@
    <!-- Mobile viewport optimized: h5bp.com/viewport -->
    <meta name="viewport" content="width=device-width">
 
-   <title>Table</title>
+   <title>BootMetro Demo - Table</title>
 
    <meta name="robots" content="noindex, nofollow">
    <meta name="description" content="BootMetro : Simple and complete web UI framework to create web apps with Windows 8 Metro user interface." />
@@ -20,26 +20,26 @@
    <!-- remove or comment this line if you want to use the local fonts -->
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-responsive.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-icons.css">
-   <link rel="stylesheet" type="text/css" href="content/css/bootmetro-ui-light.css">
-   <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-responsive.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-icons.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/bootmetro-ui-light.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/datepicker.css">
 
    <!--  these two css are to use only for documentation -->
-   <link rel="stylesheet" type="text/css" href="content/css/demo.css">
+   <link rel="stylesheet" type="text/css" href="../content/css/demo.css">
 
    <!-- Le fav and touch icons -->
    <link rel="shortcut icon" href="content/ico/favicon.ico">
-   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="content/ico/apple-touch-icon-144-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="content/ico/apple-touch-icon-114-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="content/ico/apple-touch-icon-72-precomposed.png">
-   <link rel="apple-touch-icon-precomposed" href="content/ico/apple-touch-icon-57-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../content/ico/apple-touch-icon-144-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../content/ico/apple-touch-icon-114-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../content/ico/apple-touch-icon-72-precomposed.png">
+   <link rel="apple-touch-icon-precomposed" href="../content/ico/apple-touch-icon-57-precomposed.png">
   
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-   <script src="scripts/modernizr-2.6.2.min.js"></script>
+   <script src="../scripts/modernizr-2.6.2.min.js"></script>
 </head>
 
 <body>
@@ -305,21 +305,21 @@
 
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-   <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
+   <script>window.jQuery || document.write("<script src='../scripts/jquery-1.8.3.min.js'>\x3C/script>")</script>
 
    <!--[if IE 7]>
    <script type="text/javascript" src="scripts/bootmetro-icons-ie7.js">
    <![endif]-->
 
-   <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-panorama.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-pivot.js"></script>
-   <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
-   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
+   <script type="text/javascript" src="../scripts/bootstrap.min.js"></script>
+   <script type="text/javascript" src="../scripts/bootmetro-panorama.js"></script>
+   <script type="text/javascript" src="../scripts/bootmetro-pivot.js"></script>
+   <script type="text/javascript" src="../scripts/bootmetro-charms.js"></script>
+   <script type="text/javascript" src="../scripts/bootstrap-datepicker.js"></script>
    <!--<script type="text/javascript" src="scripts/jquery.nicescroll.js"></script>-->
    <!--<script type="text/javascript" src="scripts/jquery.touchSwipe.js"></script>-->
-   <script type="text/javascript" src="scripts/demo.js"></script>
-   <script type="text/javascript" src="scripts/holder.js"></script>
+   <script type="text/javascript" src="../scripts/demo.js"></script>
+   <script type="text/javascript" src="../scripts/holder.js"></script>
    <script type="text/javascript">
       $('.panorama').panorama({
          nicescroll: true,
