--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
    <div id="header-nav" class="container">
       <ul class="nav nav-links">
          <li>
-            <a href="#">Demo</a>
+            <a href="./demo/hub.html">Demo</a>
          </li>
          <li>
             <a href="#">documentation</a>
@@ -78,7 +78,7 @@
             <a href="#">downloads</a>
          </li>
          <li>
-            <a href="#">about</a>
+            <a href="./about.html">about</a>
          </li>
       </ul>
    </div>
