--- a/about.html
+++ b/about.html
@@ -64,34 +64,11 @@
       <div class="row">
          <div class="span12">
             <div id="header-container">
-               <a id="backbutton" class="win-backbutton" href="./hub.html"></a>
+               <a id="backbutton" class="win-backbutton" href="./index.html"></a>
                <h5>BootMetro</h5>
-               <div class="dropdown">
-                  <a class="header-dropdown dropdown-toggle accent-color" data-toggle="dropdown" href="#" >
-                     About &amp; Credits
-                     <b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu">
-                  <li><a href="./metro-layouts.html">Metro Layouts</a></li>
-                  <li><a href="./hub.html">Hub</a></li>
-                  <li><a href="./tiles-templates.html">Tile Templates</a></li>
-                  <li><a href="./listviews.html">ListViews</a></li>
-                  <li><a href="./appbar-demo.html">App-Bar Demo</a></li>
-                  <li><a href="./table.html">Table Demo</a></li>
-                  <li><a href="./wizard.html">Wizard</a></li>
-                  <li><a href="./icons.html">Icons</a></li>
-                  <li><a href="./toast.html">Toast Notifications</a></li>
-                  <li><a href="./pivot.html">Pivot</a></li>
-                  <li><a href="./metro-components.html">Metro Components</a></li>
-                  <li class="divider"></li>
-                  <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
-                  <li><a href="./base-css.html">Bootstrap Base CSS</a></li>
-                  <li><a href="./components.html">Bootstrap Components</a></li>
-                  <li><a href="./javascript.html">Bootstrap Javascript</a></li>
-                  <li class="divider"></li>
-                  <li><a href="./index.html">Home</a></li>
-               </ul>
-            </div>
+               <a class="header-dropdown accent-color" href="#" >
+                  About &amp; Credits
+               </a>
             </div>
          </div>
       </div>
@@ -102,7 +79,7 @@
          <div class="span12">
    
             <h1>About <small></small></h1>
-            <p>
+            <p class="lead">
                Early in 2012, when Microsoft released the first beta of Windows 8 I finally had the opportunity to try the "Metro UI" (now renamed to... Windows 8 App Store style).
                At that time the UI guidelines was almost done, and also the "direction" set by microsoft was clear. I looked for other references of Metro style around the web, and there was nothing or little info apart the official one.
                <br/>
@@ -114,12 +91,12 @@
             </p>
    
             <h2>Author</h2>
-            <p>
+            <p class="lead">
                I'm <a href="http://www.marcellop.com/">Marcello Palmitessa</a>, an italian developer, curious designer, and tech geek.
             </p>
    
             <h2>Contributors <small></small></h2>
-            <p>
+            <p class="lead">
                I wish to thank Alexander Finger &amp; David Smith for their support and all the githubbers who keep me on the road to improve the project.
             </p>
    
