--- a/src/docs-index.html
+++ b/src/docs-index.html
@@ -69,7 +69,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
             </button>
-            <h1 class="brand">BootMetro <small>documentation</small></h1>
+            <h1 class="brand"><a href="./index.html">BootMetro</a> <small>documentation</small></h1>
             <div class="nav-collapse collapse">
                <ul class="nav">
                   <li class="active">
@@ -105,6 +105,7 @@
    <li><a href="#getting-started">Getting started</a></li>
    <li><a href="#browsers">Browsers support</a></li>
    <li><a href="#file-structure">File structure</a></li>
+   <li><a href="#howtobuild">Building from source</a></li>
    <li>
       <a href="#toc">Documentation Index</a>
    </li>
@@ -193,6 +194,38 @@
 </div>
 
 
+<!-- Browsers
+================================================== -->
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="browsers">Browsers support</h1>
+   </div>
+
+   <p class="lead">
+      BootMetro support the following browsers:
+      <ul id="browsers" class="inline">
+         <li>
+            <i class="icon-chrome"></i>
+         </li>
+         <li>
+            <i class="icon-firefox"></i>
+         </li>
+         <li>
+            <i class="icon-opera"></i>
+         </li>
+         <li>
+            <i class="icon-safari"></i>
+         </li>
+         <li>
+            <i class="icon-IE"></i> (latest versions)
+         </li>
+      </ul>
+   </p>
+
+</div>
+
+
+
 
 <!-- File structure
 ================================================== -->
@@ -248,6 +281,27 @@
 </pre>
    <p>This is the most basic form of BootMetro: compiled files for quick drop-in usage in nearly any web project. We provide compiled CSS and JS (<code>bootmetro-*.*</code>), as well as compiled and minified CSS and JS (<code>bootmetro.min.*</code>). The image files are compressed using <a href="http://imageoptim.com/">ImageOptim</a>, a Mac app for compressing PNGs.</p>
    <p>Please note that all JavaScript plugins require jQuery to be included.</p>
+</div>
+
+
+<!-- Build from source
+================================================== -->
+<div class="bs-docs-section">
+   <div class="page-header">
+      <h1 id="howtobuild">Building from source</h1>
+   </div>
+
+   <h2 id="prepare-env">Prepare your environment</h2>
+   <p>
+      <ul>
+         <li>Install <a href="http://nodejs.org/">Node.js</a> and NPM (should come with)</li>
+         <li>Install global dev dependencies: <code>npm install -g grunt-cli karma</code></li>
+         <li>Instal local dev dependencies: <code>npm install</code> while current directory is bootmetro repo</li>
+      </ul>
+   </p>
+
+   <h2 id="build">Build</h2>
+   <p>To build the whole project run <code>grunt</code></p>
 </div>
 
 
