added support for nested pivots

--- a/src/docs-advanced-components.html
+++ b/src/docs-advanced-components.html
@@ -1014,13 +1014,14 @@
       <small>Tiles, badges, and notifications (Windows Store apps documentation)</small>
    </blockquote>
 
+   <p><span class="label label-important">Important</span> All tiles must be contained in a wrap element with <code>metro</code> class.</p>
+
    <h2 id="metro-tiles-square">Square Tiles Templates</h2>
 
    <div class="metro">
 
       <h3>Square App Tile</h3>
       <table id="apptile" class="table">
-         <caption><h3>App Tile</h3></caption>
          <thead>
             <tr>
                <th>Template Name</th>
