--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   </div>
                </a>
    
-               <a class="listview-item bg-color-blueDark" rel="publisher" href="ttps://plus.google.com/114125863066139159293">
+               <a class="listview-item bg-color-blueDark" rel="publisher" href="https://plus.google.com/114125863066139159293">
                   <div class="pull-left">
                      <div class="listview-item-object icon-google-plus"></div>
                   </div>
