--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   </div>
                </a>
    
-               <a class="listview-item bg-color-greenDark" rel="publisher" href="https://github.com/aozora/bootmetro/wiki/Roadmap">
+               <a class="listview-item bg-color-greenDark" href="https://github.com/aozora/bootmetro/wiki/Roadmap">
                   <div class="pull-left">
                      <div class="listview-item-object icon-map"></div>
                   </div>
@@ -159,7 +159,7 @@
                   </div>
                </a>
    
-               <div id="donate-list" class="listview-item bg-color-red" href="#">
+               <div id="donate-list" class="listview-item bg-color-red" >
                   <h4>Support the project</h4>
                   <!--<span class="list-tile-icon icon-paypal"></span>-->
                   <form class="donate-form" action="https://www.paypal.com/cgi-bin/webscr" method="post">
