fixed download link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   look &amp; feel of Windows 8
                </p>
    
-               <a class="btn btn-large btn-success" href="https://github.com/aozora/bootmetro/zipball/master">
+               <a class="btn btn-large btn-success" href="http://aozora.github.io/bootmetro/assets/bootmetro.zip">
                   <div class="text">
                      <span class="header">Download Now</span>
                      <span class="small">latest version: 1.0.0 alpha 1</span>
